--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -21,7 +21,7 @@ $menu = wofi --show drun
 #################
 ### AUTOSTART ###
 #################
-exec-once=hyprpaper
+exec-once=ashell
 
 
 #############################
