--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -21,7 +21,7 @@ $menu = wofi --show drun
 #################
 ### AUTOSTART ###
 #################
-exec-once=ashell
+exec-once=waybar
 exec-once=swaybg -i ~/.config/hypr/wallpaper.png
 
 
