--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -3,7 +3,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,auto,mirror,eDP-1
 
 
 ###################
@@ -204,15 +204,10 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, C, killactive,
+# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for bind
+more = $mainMod, T, exec, $terminal
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
