--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -24,15 +24,13 @@ $menu = wofi --show drun
 exec-once=waybar
 exec-once=swaybg -i ~/.config/hypr/wallpaper.png
 
-
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
-
 # See https://wiki.hypr.land/Configuring/Environment-variables/
-
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,MacOS
 
 
 ###################
