--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -23,6 +23,7 @@ $menu = wofi --show drun
 #################
 exec-once=waybar
 exec-once=swaybg -i ~/.config/hypr/wallpaper.png
+exec-once=hypridle
 
 #############################
 ### ENVIRONMENT VARIABLES ###
