--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -24,6 +24,7 @@ $menu = wofi --show drun
 exec-once=waybar
 exec-once=swaybg -i ~/.config/hypr/wallpaper.png
 exec-once=hypridle
+exec-once=hyprctl setcursor MacOS 24
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -267,7 +268,7 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-bindl = , switch:Lid Switch, exec, systemctl suspend 
+bindl = , switch:Lid Switch, exec, hyprlock && systemctl suspend 
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
