--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -3,7 +3,10 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto,mirror,eDP-1
+# monitor = name, resolution, position, scale
+# ;monitor = DP-1, 1920x1080@144, 0x0, 1, mirror, ED-1
+monitor=,preferred,auto,auto
+monitor = desc:Dell Inc. DELL U2724D 2QR8H34, preferred, auto-up, 1
 
 
 ###################
@@ -13,7 +16,7 @@ monitor=,preferred,auto,auto,mirror,eDP-1
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = dolphin
 $menu = wofi --show drun
 
@@ -205,7 +208,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for bind
-more = $mainMod, T, exec, $terminal
+bind = $mainMod, T, exec, ghostty
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 
