--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -207,6 +207,9 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# Reload Hyprland
+bind = $mainMod, R, exec, hyprctl reload && killall waybar & waybar &
+
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for bind
 bind = $mainMod, T, exec, ghostty
 bind = $mainMod, Q, killactive,
