adding bluetooth and wifi apps

--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -6,7 +6,16 @@
 # monitor = name, resolution, position, scale
 # ;monitor = DP-1, 1920x1080@144, 0x0, 1, mirror, ED-1
 monitor=,preferred,auto,auto
-monitor = desc:Dell Inc. DELL U2724D 2QR8H34, preferred, auto-up, 1
+
+# Display above
+# monitor = desc:Dell Inc. DELL U2724D 2QR8H34, preferred, auto-up, 1
+
+# Mirrored display
+# monitor = desc:Dell Inc. DELL U2724D 2QR8H34, 2560x1440@60, auto-up, 1, mirror, eDP-1
+
+# Other display
+# monitor = eDP-1, disable
+monitor = desc:Dell Inc. DELL U2724D 2QR8H34, preferred, auto, 1
 
 
 ###################
@@ -208,7 +217,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Reload Hyprland
-bind = $mainMod, R, exec, hyprctl reload && killall waybar & waybar &
+bind = $mainMod, R, exec, hyprctl reload ; killall .waybar-wrapped ; waybar & swaybg -i ~/.config/hypr/wallpaper.png
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for bind
 bind = $mainMod, T, exec, ghostty
