--- a/components/waybar/config
+++ b/components/waybar/config
@@ -1,5 +1,6 @@
 {
   "layer": "top",
+  "output": ["eDP-1", "DP-1", "DP-2", "DP-3", "DP-4"],
   "position": "top",
   "margin-top": 5,
   "margin-bottom": -5,
