--- a/components/waybar/config
+++ b/components/waybar/config
@@ -36,7 +36,7 @@
         "off": "󰂲",
         "connected": "󰂱",
         },
-    "on-click": "blueman-manager",
+    "on-click": "overskride",
     "tooltip-format-connected":"{device_enumerate}"
   },
 
@@ -51,7 +51,7 @@
     "format-disconnected": "󰤠 ",
     "interval": 5,
     "tooltip-format": "{essid} ({signalStrength}%)",
-    "on-click": "nm-connection-editor"
+    "on-click": "nmgui"
 
  },
 
