adding brightness control

--- a/components/hyprland/hyprland.conf
+++ b/components/hyprland/hyprland.conf
@@ -5,7 +5,7 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 # monitor = name, resolution, position, scale
 # ;monitor = DP-1, 1920x1080@144, 0x0, 1, mirror, ED-1
-monitor=,preferred,auto,auto
+# monitor=,preferred,auto,auto
 
 # Display above
 # monitor = desc:Dell Inc. DELL U2724D 2QR8H34, preferred, auto-up, 1
@@ -227,6 +227,8 @@ bind = $mainMod, M, exit,
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
+bind = $mainMod SHIFT, left, swapwindow, l
+bind = $mainMod SHIFT, right, swapwindow, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
@@ -275,7 +277,7 @@ bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86MonBrightnessDown, exec, rightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
