--- a/components/waybar/config
+++ b/components/waybar/config
@@ -36,7 +36,7 @@
         "off": "󰂲",
         "connected": "󰂱",
         },
-    "on-click": "overskride",
+    "on-click": "adw-bluetooth",
     "tooltip-format-connected":"{device_enumerate}"
   },
 
